--- a/index.html
+++ b/index.html
@@ -12,24 +12,25 @@
 <body>
 
     <div class="navbar">
-        <a href="#">Link1</a>
-        <a href="#">Link2</a>
-        <a href="#">Link3</a>
-        <a href="#">Link4</a>
+        <a href="_blank">ABOUT</a>
+        <a href="_blank">CASES</a>
+        <a href="https://www.instagram.com/zye.design/">INSTAGRAM</a>
+        <a href="https://www.behance.net/yi-hongzhou?tracking_source=search_users|yi-hong%20zhou">BEHANCE</a>
+        <a href="_blank">CONTACT</a>
     </div>
 
     <div class="header">
-        <h1>My Website</h1>
-        <p>A website created by me.</p>
+        <h1>Discover me</h1>
+        <p>the journey of a junior productdesigner.</p>
     </div>
 
 
 
     <div class="row">
         <div class="side">
-            <h2>About Me</h2>
-            <h5>Photo of me:</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
+            <h2>Yi-Hong Zhou</h2>
+            <h5>Junior Productdesigner</h5>
+            <img class="fakeimg" style="height:fit-content;" src="zelfportret.jpg">
             <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
             <h3>More Text</h3>
             <p>Lorem ipsum dolor sit ame.</p>
@@ -38,16 +39,16 @@
             <div class="fakeimg" style="height:60px;">Image</div>
         </div>
         <div class="main">
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Dec 7, 2017</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
-            <p>Some text..</p>
+            <h2>My Latest Articles</h2>
+            <h5>Parametric sportswear design for professional athletes, Dec 7, 2017</h5>
+            <img class="fakeimg" style="height:fit-content" src="GHproject.png">
+            <p>Implementing the grasshopper engine to construct a parametric design for specific sportswear>
             <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
                 ullamco.</p>
             <br>
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Sep 2, 2017</h5>
+            <h2>Collaborations</h2>
+            <h5>Projects in collaboration with different designers and companies, Sep 2, 2017</h5>
             <div class="fakeimg" style="height:200px;">Image</div>
             <p>Some text..</p>
             <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod
@@ -57,7 +58,8 @@
     </div>
 
     <div class="footer">
-        <h2>Footer</h2>
+        <h2>Follow for more</h2>
+
     </div>
 
 </body>
