--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="#contact">Contact</a>
         <a href="#portfolio">Portfolio</a>
         <a href="#about">About</a>
-        <span><a href="home.html"><img src="/img/Designlogo.png" class ="homebutton"></a></span>
+        <span><a href="home.html"><img src="/imag/Designlogo.png" class ="homebutton"></a></span>
 
     </div>
 
@@ -105,17 +105,17 @@
             <div class="oneproject" >
                 <h2> Sheetmetal BBQ</h2>
 
-                <img src="/img/bbqcamping.jpg">
+                <img src="/imag/bbqcamping.jpg">
 
             </div>
             <div class="oneproject" >
                 <h2> BourBon </h2>
-                <img src="/img/bonbonbox 1.jpg">
+                <img src="/imag/bonbonbox 1.jpg">
 
             </div>
             <div class="oneproject" >
                 <h2> Clover Birdfeeder</h2>
-                <img src="/img/Clover Bird integration 2 with seeds.jpg">
+                <img src="/imag/Clover Bird integration 2 with seeds.jpg">
 
                    <div class="oneproject" >
             <h2> Game ON!</h2>
@@ -125,23 +125,23 @@
     </div>
             <div class="oneproject" >
                 <h2> PP Sea Creature</h2>
-                <img src="/img/ppsea.jpg">      
+                <img src="/imag/ppsea.jpg">      
 
             </div>
             <div class="oneproject" >
                 <h2>Bourbon glass</h2>
-                <img src="/img/bourbon interior.14.jpg">
+                <img src="/imag/bourbon interior.14.jpg">
             </div>
 
             <div class="oneproject" >
                 <h2> Parametric Sleeve</h2>
-                <img src="/img/bigbig.png">
+                <img src="/imag/bigbig.png">
 
 
             </div>
             <div class="oneproject" >
                 <h2> Headset Laswann</h2>
-                <img src="/img/blonde heroshot.png">
+                <img src="/imag/blonde heroshot.png">
 
             </div>
         </div>
